Fixed bug in Test_Something.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,11 +19,11 @@ set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/re
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/relwithdebinfo)
 set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/relwithdebinfo)
 
-# unsure if these are necessary
-set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
-set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE})
-set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG})
-set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO})
+## unsure if these are necessary
+#set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
+#set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE})
+#set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG})
+#set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO})
 
 # set directories
 set (PROJECT_DIRECTORIES)
@@ -48,32 +48,15 @@ endforeach(PATH)
 message(STATUS ${PROJECT_NAME} Version: ${PROJECT_VERSION})
 message(STATUS "")
 
-# integrate cppcheck targets in IDE
-option (WITH_CPPCHECKTARGET "Add target for cppcheck testing" OFF)
 #######################################################################################################
 # ## tests
 
 # with tests or not
-option (WITH_TESTS "Use UnitTest++ for testing" ON)
+option(WITH_TESTS "Use UnitTest++ for testing" ON)
 
 if (WITH_TESTS)
     enable_testing()
-    
     # add tests here
     add_test(Something ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/TestExec Something)
-
-    find_package(Cppcheck)
-    if (CPPCHECK_FOUND)
-        # copy list just to be sure
-        list(APPEND CPPCHK_DEPLIST ${PROJECT_DIRECTORIES})
-
-        # generate include list with "-I" prefix
-        foreach(arg ${PROJECT_INCLUDES})
-            set(CPPCHK_INCL "${CPPCHK_INCL} -I ${arg}")
-        endforeach(arg ${PROJECT_INCLUDES})
-
-        # add the test itself!
-        add_test(CppCheck ${CPPCHECK_EXECUTABLE} "--error-exitcode=1" ${CPPCHK_DEPLIST} ${CPPCHK_INCL})
-    endif (CPPCHECK_FOUND)
 endif (WITH_TESTS)
 
