Added dummy classes for testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,17 +19,19 @@ set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/re
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/relwithdebinfo)
 set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/relwithdebinfo)
 
-## unsure if these are necessary
-#set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
-#set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE})
-#set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG})
-#set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO})
+# unsure if these are necessary
+set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
+set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE})
+set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG})
+set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO})
 
 # set directories
 set (PROJECT_DIRECTORIES)
 list (APPEND PROJECT_DIRECTORIES ${CMAKE_SOURCE_DIR}/src/app)
 list (APPEND PROJECT_DIRECTORIES ${CMAKE_SOURCE_DIR}/src/Tests/TestExec)
-    
+list (APPEND PROJECT_DIRECTORIES ${CMAKE_SOURCE_DIR}/src/Something)
+list (APPEND PROJECT_DIRECTORIES ${CMAKE_SOURCE_DIR}/src/Apple)
+
 # set includes
 set (PROJECT_INCLUDES)
 list (APPEND PROJECT_INCLUDES ${CMAKE_SOURCE_DIR}/inc)       
@@ -58,5 +60,6 @@ if (WITH_TESTS)
     enable_testing()
     # add tests here
     add_test(Something ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/TestExec Something)
+    add_test(Apple ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/TestExec Apple)
 endif (WITH_TESTS)
 
