--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,6 +1,7 @@
 set (APP app)
 
 set (SomethingLIB Something)
+set (AppleLIB Apple)
 
 file(GLOB ${APP}_SOURCES RELATIVE ${CMAKE_SOURCE_DIR}/src/${APP} *.c;*.cpp;*.txt)
 file(GLOB ${APP}_HEADERS RELATIVE ${CMAKE_SOURCE_DIR}/src/${APP} *.h;../inc/*.h)
@@ -11,12 +12,5 @@ endforeach(PATH)
 
 add_executable(${APP} ${${APP}_SOURCES} ${${APP}_HEADERS})
 
-target_link_libraries(${APP} ${LIB} ${TestLIB} ${OS_LIBS})
-
-if (WITH_CPPCHECKTARGET)
-	file(GLOB to_remove RELATIVE ${CMAKE_SOURCE_DIR}/src/${APP} *.txt)
-	list(REMOVE_ITEM ${APP}_SOURCES ${to_remove})
-	include (GenerateCppcheck)
-	GENERATE_CPPCHECK(SOURCES ${${APP}_SOURCES} TARGET_NAME "CppCheck_${APP}" INCLUDES ${PROJECT_INCLUDES})
-endif(WITH_CPPCHECKTARGET)
+target_link_libraries(${APP} ${LIB} ${TestLIB})
 
